Add candidate response to docs
