# Routes/candidateResponse.js
@@ -22,7 +22,7 @@ router.route('/api/v1/candidate-response').post(createCandidateResponse)
 router.route('/api/v1/candidate-response/:id').get(protect, authorize, getCandidateResponse)
 router.route('/api/v1/candidate-response/:id').put(protect, authorize, updateCandidateResponse)
 router.route('/api/v1/candidate-response/:id').delete(protect, authorize, deleteCandidateResponse)
-router.route('/api/v1/candidate-response/self').get(protect, authorize, getCandidateResponseByTestAndQuestion)
+router.route('/api/v1/candidate-response/test/:test_id/question/:question_id').get(protect, authorize, getCandidateResponseByTestAndQuestion)
 // router.route('/api/v1/candidate-response/self').put(protect, authorizeAdmin, updateSelf)
 
 module.exports = router
